--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
+  "engines": {
+    "node": ">=14.18.0 || >=16.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "start": "tsc && vite build && vite preview"
@@ -13,7 +16,7 @@
     "vite": "^4.4.5"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@types/node": "^20.8.7",
     "vite-plugin-handlebars": "^1.6.0"
   }
 }
