--- a/package.json
+++ b/package.json
@@ -9,15 +9,25 @@
   "scripts": {
     "dev": "vite",
     "start": "tsc && vite build && vite preview",
-    "build": "tsc && vite build"
+    "build": "tsc && vite build",
+    "style": "npx stylelint **/*.scss --fix"
   },
   "devDependencies": {
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-n": "^16.3.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "sass": "^1.69.4",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "stylelint": "^15.11.0",
+    "stylelint-config-standard-scss": "^11.1.0",
+    "vite": "^4.4.5",
+    "vite-plugin-eslint": "^1.8.1"
   },
   "dependencies": {
-    "@types/node": "^20.8.7",
     "vite-plugin-handlebars": "^1.6.0"
   }
 }
