--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "node": ">=14.18.0 || >=16.0.0"
   },
   "scripts": {
-    "eslint": "npx eslint . --fix  --ext .js,.jsx,.ts,.tsx",
+    "eslint": "npx eslint ./src --fix  --ext .js,.jsx,.ts,.tsx",
     "dev": "vite",
-    "start": "tsc && vite build && vite preview",
-    "build": "tsc && vite build",
-    "style": "npx stylelint **/*.scss --fix"
+    "start": "tsc --noEmit && vite build && vite preview",
+    "build": "tsc --noEmit && vite build",
+    "style": "npx stylelint ./src/**/*.scss --fix"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -24,15 +24,14 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-n": "^16.3.1",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react-hooks": "^4.3.0",
     "sass": "^1.69.4",
     "stylelint": "^15.11.0",
     "stylelint-config-standard-scss": "^11.1.0",
-    "typescript": "^5.2.2",
-    "vite": "^4.4.5",
-    "vite-plugin-eslint": "^1.8.1"
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5"
   },
   "dependencies": {
+    "@types/node": "^20.9.0",
     "handlebars": "^4.7.8",
     "vite-plugin-handlebars": "^1.6.0"
   }
