--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -4,7 +4,7 @@
     "noEmit": true,
     "allowJs": true
   },
-  "extends": "./tsconfig.base.json",
+  "extends": "./tsconfig.json",
   "include": [
     "src/**/*.ts",
     "src/**/*.js",
