--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "lint-staged": {
     "*.{js,ts}": "eslint --fix",
+    "**/*.ts": "tsc-files --noEmit",
     "*.{css,scss}": "stylelint --fix"
   },
   "devDependencies": {
