--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     }
   },
   "lint-staged": {
-    "*.{js,ts}": "eslint --fix",
-    "**/*.ts": "tsc-files --noEmit",
-    "*.{css,scss}": "stylelint --fix"
+    "./src/**/*.{js,ts}": "eslint --fix",
+    "./src/**/*.ts": "tsc-files --noEmit",
+    "./src/**/*.{css,scss}": "stylelint --fix"
   },
   "devDependencies": {
     "@types/chai": "^4.3.11",
