--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "lint-staged": {
     "./src/**/*.{js,ts}": "eslint --fix",
-    "./src/**/*.ts": "tsc-files --noEmit",
+    "*.ts": "tsc --noEmit --pretty",
     "./src/**/*.{css,scss}": "stylelint --fix"
   },
   "devDependencies": {
